<resources>
    <string name="app_name">For Rent</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="reset_link"><i>Enter the email address you signed up with and we\'ll email you a reset link</i></string>
    <string name="send_password_reset_link">send password reset link</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_underlined"><u>Sign In</u></string>
    <string name="username_small_error">Username cannot be less than 4 characters</string>
    <string name="username_big_error">Username cannot exceed 20 characters</string>
    <string name="missing_fileds">Missing required fields</string>
    <string name="user_added">User added successfully</string>
    <string name="user_failed">Email already exists</string>
    <string name="short_password_error">Password should be at least 6 characters</string>
    <string name="lower_password_error">Password should contain a lowercase character</string>
    <string name="upper_password_error">Password should contain an uppercase character</string>
    <string name="special_password_error">Password should contain a special character</string>
    <string name="username_error">uppercase and special characters are not allowed</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="verify_email">Please verify your email to login</string>
    <string name="logged_successfully">Logged in successfully</string>
    <string name="check_email">Check your email</string>
    <string name="email_not_recorded">Sorry, this email is not recorded</string>
    <string name="click_here_after_email_verification">Click here after Email verification</string>
    <string name="logout">Logout</string>
    <string name="logged_out">User Logged Out Successfully.</string>
</resources>